# pflask CMakeLists.txt
# Copyright (C) 2013 Alessandro Ghedini <alessandro@ghedini.me>
# This file is released under the 2 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pflask C)

SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)

SET(PFLASK_VERSION ${VERSION_MAJOR}.${VERSION_MINOR})

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(NL libnl-3.0 REQUIRED)
PKG_CHECK_MODULES(NL_ROUTE libnl-route-3.0 REQUIRED)

FILE(GLOB SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")

ADD_EXECUTABLE(pflask ${SOURCES})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/version.h.in
		${CMAKE_CURRENT_BINARY_DIR}/version.h)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/src
	${NL_INCLUDE_DIRS}
	${CMAKE_CURRENT_BINARY_DIR}
)

TARGET_LINK_LIBRARIES(pflask
	${NL_LIBRARIES}
	${NL_ROUTE_LIBRARIES}
)

SET_TARGET_PROPERTIES(pflask PROPERTIES
	COMPILE_FLAGS "-Wall -pedantic -g -std=gnu99 -D_GNU_SOURCE"
)

INSTALL(TARGETS pflask DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/tools/pflask-debuild DESTINATION
	${CMAKE_INSTALL_PREFIX}/bin
)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/docs/pflask.1
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
)
